

======================================================================
Changes since version 3.3.x

NOTE: Use this section for changes that are NOT included in the 3.3
branch.
======================================================================


General Changes
===============

These entries apply to all relevant language mappings unless otherwise
noted.

- Fixed bug in icegridadmin where invalid XML could cause a crash.

- Fixed a bug where calling the object adapter waitForHold() method 
  would cause other calls on the object adapter to hang until the 
  waitForHold() method returned.

- Improved connection establishment scalability. Creating or accepting
  a new connection show now be done in constant time regardless of the
  number of connections already established or accepted.

- Fixed Glacier2 router bug which would cause the getCategoryForClient
  method to throw Ice::NullHandleException if the server endpoints
  were not set, instead it now returns an empty string.

- Ice.NegativeSizeException has been removed. The run time now throws
  MarshalException or UnmarshalOutOfBoundsException instead.

- The Ice thread pool now supports receiving and sending data over Ice
  conncetions using multiple threads. Allowing multiple connections to
  concurrently send and receive data improves CPU usage on machines
  with multiple cores. The maximum number of threads allowed to
  concurrently send/receive data is capped by the number of available
  cores.

- The Ice runtime now uses Windows completion ports and overlapped IO
  to accept, connect and receive and send data over connections. This
  improves scalability of server applications handling many connection
  on Windows.

- Ice connections now support read timeouts. A connection will now
  eventually timeout once the connection timeout is reached if no more
  data is available for read after the message header was received. 
  ACM no longer closes connection which have a message being received.
