@@ -95,11 +95,11 @@ public:
                                const Ice::Current&);
     virtual void createSessionFromSecureConnection_async(const AMD_Router_createSessionFromSecureConnectionPtr&,
                                                          const Ice::Current&);
+    virtual void refreshSession(const Ice::Current&);
     virtual void destroySession(const ::Ice::Current&);
     virtual Ice::Long getSessionTimeout(const ::Ice::Current&) const;
-    virtual void ice_ping(const Ice::Current&) const;
 
-    RouterIPtr getRouter(const Ice::ConnectionPtr&, const Ice::Identity&) const;    
+    RouterIPtr getRouter(const Ice::ConnectionPtr&, const Ice::Identity&, bool = true) const;    
     RouterIPtr getRouter(const std::string&) const;    
     
     void expireSessions();
